--- a/examples/uc_engine_hello_world/uc_engine_hello_world/MainPage.xaml
+++ b/examples/uc_engine_hello_world/uc_engine_hello_world/MainPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <Viewbox>
-        <SwapChainPanel x:Name="m_swapChainPanel" MinHeight="8" MinWidth="8"/>
+        <SwapChainPanel x:Name="m_swapChainPanel" MinHeight="8" MinWidth="8" SizeChanged="M_swapChainPanel_SizeChanged" Width="1600" Height="900"/>
         </Viewbox>
 
     </Grid>
