--- a/examples/uc_engine_hello_world/uc_engine_hello_world/App.xaml
+++ b/examples/uc_engine_hello_world/uc_engine_hello_world/App.xaml
@@ -1,7 +1,5 @@
-﻿<Application
+﻿<Application x:Name="m_mainApp"
     x:Class="uc_engine_hello_world.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:uc_engine_hello_world">
-
-</Application>
+    xmlns:local="using:uc_engine_hello_world"/>
